# local_budject_fraud_risk

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  chat.py  dashboard.py  documents.py  projects.py  references.py  schemas.py
backend/app/core/: dependencies.py  security.py  settings.py
backend/app/db/: models.py  queries.py  session.py
backend/app/guardrails/: chat_guards.py
backend/app/rag/: graph.py  prompt.py  retrieval.py
backend/app/rag/prompts/chat/v1/: system.md  user.md
backend/app/services/: cache.py  observability.py  storage.py  tei.py  telemetry.py  vllm.py
backend/scripts/: seed_users.py
backend/tests/: conftest.py  test_api.py  test_chat_guards.py  test_chat_stream.py  test_security.py  test_tei.py  test_telemetry.py
benchmarks/: README.md  questions.yaml  stream_bench.py  stub_vllm.py
docs/: ARCHITECTURE.md  DATA_TEAM_GUIDE.md  (+2 more)
pipelines/: pyproject.toml
pipelines/common/: __init__.py  act_parser.py  aggregation.py  budget_report_extract.py  chunker.py  corpus_catalog.py  corpus_upload.py  extract.py  garbled.py  guardrails_stage.py  item_extract.py  item_prechecks.py  manifest.py  manifest_gen.py  observability.py  prechecks.py  prompts.py  scoring_evidence.py  settings.py  standard_prices.py  structured_extract.py  tei.py  thai_num.py  vllm.py
pipelines/curated/: standard_prices.yaml
pipelines/flows/: extract_budget_summaries.py  extract_structured.py  ingest_documents.py  ingest_regulations.py  score_risk.py
pipelines/hpc_io/: ocr_batch.py
pipelines/prompts/: README.md
pipelines/prompts/risk_scoring/v1/: system.md  user.md
pipelines/prompts/risk_scoring/v1/factors/: budget_deviation.md  threshold_splitting.md
pipelines/prompts/risk_scoring/v2/: system.md  user.md
pipelines/prompts/risk_scoring/v2/factors/: document_completeness.md  timeline_anomaly.md  vendor_concentration.md
pipelines/tests/: conftest.py  test_act_parser.py  test_aggregation.py  test_budget_report_extract.py  test_chunker.py  test_corpus_catalog.py  test_garbled.py  test_guardrails_stage.py  test_item_extract.py  test_manifest.py  test_prechecks.py  test_prompts.py  test_score_risk.py  test_scoring_evidence.py  test_structured_extract.py  test_thai_num.py  test_vllm.py
shared/: pyproject.toml
shared/schemas/: __init__.py  chunk.py  feedback.py  guardrails.py  risk.py
shared/tests/: test_chunk.py  test_feedback.py  test_guardrails.py  test_risk.py
(+319 files in other folders)
