[project]
name = "mission3-backend"
version = "0.1.0"
description = "Mission 3 FastAPI backend — Phase 3 read API over pre-computed risk data (offline-first)"
requires-python = ">=3.11"
dependencies = [
    "mission3-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "minio>=7.2",
    "httpx>=0.27",
    "langgraph>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.uv.sources]
mission3-shared = { path = "../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
