[project]
name = "mission3-shared"
version = "0.1.0"
description = "Mission 3 data contracts — enum-locked RiskResult, Chunk, Citation, Feedback"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schemas"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
